--- a/TMessagesProj/src/main/res/values/strings.xml
+++ b/TMessagesProj/src/main/res/values/strings.xml
@@ -4809,4 +4809,18 @@
     <string name="UserAcceptedToGroupAction">un1 was accepted into the group</string>
     <string name="UserAcceptedToGroupPush">%1$s was accepted into the group</string>
     <string name="UserAcceptedToGroupPushWithGroup">%2$s|%1$s was accepted into the group</string>
+
+    <!-- contest -->
+    <string name="SavingContent">Saving content</string>
+    <string name="RestrictSavingContent">Restrict saving content</string>
+    <string name="RestrictSavingExplainChannel">Participants won\'t be able to forward messages from this channel or save media files.</string>
+    <string name="RestrictSavingExplainGroup">Participants won\'t be able to forward messages from this group or save media files.</string>
+    <string name="TypePrivateRestricted">Private restricted</string>
+    <string name="TypePublicRestricted">Public restricted</string>
+    <string name="TypePrivateRestrictedGroup">Private restricted</string>
+    <string name="TypePublicRestrictedGroup">Public restricted</string>
+    <string name="ForwardsRestrictedChannel">Forwards from this channel are restricted</string>
+    <string name="ForwardsRestrictedGroup">Forwards from this group are restricted</string>
+    <string name="EnabledSavingRestrictions">un1 enabled content saving restrictions</string>
+	<string name="DisabledSavingRestrictions">un1 disabled content saving restrictions</string>
 </resources>
