reactions list in menu

--- a/TMessagesProj/src/main/res/values/strings.xml
+++ b/TMessagesProj/src/main/res/values/strings.xml
@@ -4816,14 +4816,14 @@
     <string name="EnableReactionsGroup">Allow group members to react to messages.</string>
     <string name="EnableReactionsChannel">Allow subscribers to react to channel posts.</string>
     <string name="AvailableReactions">Available reactions</string>
-    <string name="MessageReacted_zero">%1$d Reacted</string>
-    <string name="MessageReacted_one">Reacted</string>
-    <string name="MessageReacted_two">%1$d Reacted</string>
-    <string name="MessageReacted_few">%1$d Reacted</string>
-    <string name="MessageReacted_many">%1$d Reacted</string>
-    <string name="MessageReacted_other">%1$d Reacted</string>
+    <string name="MessageReacted_zero">%1$d Reactions</string>
+    <string name="MessageReacted_one">%1$d Reaction</string>
+    <string name="MessageReacted_two">%1$d Reactions</string>
+    <string name="MessageReacted_few">%1$d Reactions</string>
+    <string name="MessageReacted_many">%1$d Reactions</string>
+    <string name="MessageReacted_other">%1$d Reactions</string>
     <string name="MessageReactedAndSeen_zero">%1$d/%2$d Reacted</string>
-    <string name="MessageReactedAndSeen_one">Reacted</string>
+    <string name="MessageReactedAndSeen_one">%1$d/%2$d Reacted</string>
     <string name="MessageReactedAndSeen_two">%1$d/%2$d Reacted</string>
     <string name="MessageReactedAndSeen_few">%1$d/%2$d Reacted</string>
     <string name="MessageReactedAndSeen_many">%1$d/%2$d Reacted</string>
